# Coklan

./: CMakeLists.txt  LICENSE.md  README.md  build_all.bat
.github/: FUNDING.yml
project/: CMakeLists.txt
project/ckdatamodel/: CMakeLists.txt
project/ckserver/: CMakeLists.txt
project/ckserver/src/: ckserver.cpp
